test-expected/large/reportpackages/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: reportpackages
    foo.com/duversion: 1.11.79-20190925.1569390023868
    foo.com/version: 1.11.79
  labels:
    app.kubernetes.io/name: reportpackages
    helm.sh/chart: reportpackages-1.11.79
  name: reportpackages
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reportpackages
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reportpackages
        app.kubernetes.io/name: reportpackages
    spec:
      containers:
      - env:
        - name: FOO_CACHE_CONFIG_MEMBERSHIPPORTRANGE
          value: 35001-35003
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-report-packages:1.11.79-20190925.1569390023868
        imagePullPolicy: IfNotPresent
        name: reportpackages
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 35001
          name: cache1
        - containerPort: 35002
          name: cache2
        - containerPort: 35003
          name: cache3
        resources: {}
